--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -120,6 +120,64 @@
                         </form>
                   </div>
             </section>
+            <section class="contacts">
+                  <div class="contacts-container container">
+                        <h2 class="contacts__title title">Our offices</h2>
+                        <p class="contacts__subtitle subtitle">
+                              Give us a call, send us a note or visit our office. We can’t wait to hear from you!
+                        </p>
+                        <ul class="contacts__offices">
+                              <li class="office">
+                                    <h3 class="office__title title">New York, USA</h3>
+                                    <p class="office__address">8502 Preston Rd. Inglewood, New York 98380</p>
+                                    <a href="#" class="office__map">See on the map</a>
+                                    <ul class="office__contacts">
+                                          <li class="contacts__item">
+                                               <span class="item__title">Call: </span><span class="item__value">(405) 555-0128</span>
+                                          </li>
+                                          <li class="contacts__item">
+                                               <span class="item__title">Email: </span><span class="item__value">hello@createx.com</span>
+                                          </li>
+                                          <li class="contacts__item">
+                                               <span class="item__title">Schedule: </span><span class="item__value">Mon - Fri 9:00 - 18:00</span>
+                                          </li>
+                                    </ul>
+                              </li>
+                              <li class="office">
+                                    <h3 class="office__title title">New Jersey, USA</h3>
+                                    <p class="office__address">2464 Royal Ln. Mesa, New Jersey 45463</p>
+                                    <a href="#" class="office__map">See on the map</a>
+                                    <ul class="office__contacts">
+                                          <li class="contacts__item">
+                                               <span class="item__title">Call: </span><span class="item__value">(808) 555-0111</span>
+                                          </li>
+                                          <li class="contacts__item">
+                                               <span class="item__title">Email: </span><span class="item__value">hello@createx.com</span>
+                                          </li>
+                                          <li class="contacts__item">
+                                               <span class="item__title">Schedule: </span><span class="item__value">Mon - Fri 9:00 - 18:00</span>
+                                          </li>
+                                    </ul>
+                              </li>
+                              <li class="office">
+                                    <h3 class="office__title title">San Francisco, USA</h3>
+                                    <p class="office__address">8502 Preston Rd. Inglewood, San Francisco 98380</p>
+                                    <a href="#" class="office__map">See on the map</a>
+                                    <ul class="office__contacts">
+                                          <li class="contacts__item">
+                                               <span class="item__title">Call: </span><span class="item__value">(505) 555-0125</span>
+                                          </li>
+                                          <li class="contacts__item">
+                                               <span class="item__title">Email: </span><span class="item__value">hello@createx.com</span>
+                                          </li>
+                                          <li class="contacts__item">
+                                               <span class="item__title">Schedule: </span><span class="item__value">Mon - Fri 10:00 - 19:00</span>
+                                          </li>
+                                    </ul>
+                              </li>
+                        </ul>
+                  </div>
+            </section>
             <section class="application">
                   <div class="application-container container">
                         <form action="" class="aplication__form">
