--- a/pages/index.html
+++ b/pages/index.html
@@ -9,32 +9,32 @@
 </head>
 
 <body>
-      <header class="header" id="header">
-        <div class="header__container container">
-          <a href="./index.html" class="logo"><img src="../assets/icons/logo.svg" alt="logo" /></a>
-          <nav class="header__nav">
-            <ul class="nav__list">
-              <li class="nav__item"><a class="nav__link" href="./about.html">About Us</a></li>
-              <li class="nav__item"><a class="nav__link" href="./services.html">Services</a></li>
-              <li class="nav__item"><a class="nav__link" href="./work.html">Work</a></li>
-              <li class="nav__item"><a class="nav__link" href="./news.html">News</a></li>
-              <li class="nav__item"><a class="nav__link" href="./contacts.html">Contacts</a></li>
-            </ul>
-          </nav>
-          <div class="header-contacts">
-            <a href="tel:4055550128" class="header-contacts__link link-call">
-              <img src="../assets/icons/communications/iPhone-colored.svg" alt="phone">
-              <span class="link-call__title">Call us</span>
-              <span class="link-call__tel">(405) 555-0128</span>
-            </a>
-            <a href="mailto:hello@createx.com" class="header-contacts__link link-mail">
-              <img src="../assets/icons/communications/Chat-colored.svg" alt="phone">
-              <span class="link-mail__title">Talk to us</span>
-              <span class="link-mail__adr">hello@createx.com</span>
-            </a>
-          </div>
-        </div>
-      </header>
+  <header class="header" id="header">
+    <div class="header__container container">
+      <a href="./index.html" class="logo"><img src="../assets/icons/logo.svg" alt="logo" /></a>
+      <nav class="header__nav">
+        <ul class="nav__list">
+          <li class="nav__item"><a class="nav__link" href="./about.html">About Us</a></li>
+          <li class="nav__item"><a class="nav__link" href="./services.html">Services</a></li>
+          <li class="nav__item"><a class="nav__link" href="./work.html">Work</a></li>
+          <li class="nav__item"><a class="nav__link" href="./news.html">News</a></li>
+          <li class="nav__item"><a class="nav__link" href="./contacts.html">Contacts</a></li>
+        </ul>
+      </nav>
+      <div class="header-contacts">
+        <a href="tel:4055550128" class="header-contacts__link link-call">
+          <img src="../assets/icons/communications/iPhone-colored.svg" alt="phone">
+          <span class="link-call__title">Call us</span>
+          <span class="link-call__tel">(405) 555-0128</span>
+        </a>
+        <a href="mailto:hello@createx.com" class="header-contacts__link link-mail">
+          <img src="../assets/icons/communications/Chat-colored.svg" alt="phone">
+          <span class="link-mail__title">Talk to us</span>
+          <span class="link-mail__adr">hello@createx.com</span>
+        </a>
+      </div>
+    </div>
+  </header>
   <main>
     <section class="hero">
       <div class="slider__btn disabled" id="slide-hero-to-left">
@@ -61,6 +61,7 @@
               <a href="./about.html" class="btn l-btn white-outline">Learn more about us</a>
               <a href="#" class="btn l-btn">SUBMIT REQUEST</a>
             </div>
+            <img src="../assets/background/slide-bg.jpg" alt="" class="slide__bg">
           </div>
         </div>
         <div class="slider__slide" id="hero-slide-2">
@@ -71,7 +72,7 @@
             <div class="hero-btns">
               <a href="./about.html" class="btn l-btn white-outline">Learn more about us</a>
               <a href="#" class="btn l-btn">SUBMIT REQUEST</a>
-            </div>
+            </div><img src="../assets/background/slide-bg.jpg" alt="" class="slide__bg">
           </div>
         </div>
         <div class="slider__slide" id="hero-slide-3">
@@ -83,7 +84,7 @@
             <div class="hero-btns">
               <a href="./about.html" class="btn l-btn white-outline">Learn more about us</a>
               <a href="#" class="btn l-btn">SUBMIT REQUEST</a>
-            </div>
+            </div><img src="../assets/background/slide-bg.jpg" alt="" class="slide__bg">
           </div>
         </div>
         <div class="slider__slide" id="hero-slide-4">
@@ -95,7 +96,7 @@
             <div class="hero-btns">
               <a href="./about.html" class="btn l-btn white-outline">Learn more about us</a>
               <a href="#" class="btn l-btn">SUBMIT REQUEST</a>
-            </div>
+            </div><img src="../assets/background/slide-bg.jpg" alt="" class="slide__bg">
           </div>
         </div>
       </div>
@@ -579,6 +580,7 @@
           <button class="btn m-btn">send request</button>
         </form>
       </div>
+      <img src="../assets/background/application-bg.jpg" alt="application" class="application__bg">
     </section>
   </main>
   <footer class="footer">
