fix application section

--- a/pages/services.html
+++ b/pages/services.html
@@ -121,8 +121,7 @@
                               <ul class="form__inputs">
                                     <li class="form__input input-block">
                                           <label for="name">Name*</label>
-                                          <input type="text" name="name" id="application-name-input"
-                                                placeholder="Your name">
+                                          <input type="text" name="name" id="application-name-input" placeholder="Your name">
                                     </li>
                                     <li class="form__input input-block">
                                           <label for="phone">Phone*</label>
@@ -140,16 +139,15 @@
                                                 placeholder="Your message"></textarea>
                                     </li>
                                     <div class="form__checkbox">
-                                          <input type="checkbox" name="form-checkbox" id="form-checkbox"
-                                                class="custom-checkbox">
-                                          <label for="form-checkbox">I agree to receive communications from Createx
-                                                Construction
+                                          <input type="checkbox" name="form-checkbox" id="form-checkbox" class="custom-checkbox">
+                                          <label for="form-checkbox">I agree to receive communications from Createx Construction
                                                 Bureau.</label>
                                     </div>
                               </ul>
                               <button class="btn m-btn">send request</button>
                         </form>
                   </div>
+                  <img src="../assets/background/application-bg.jpg" alt="application" class="application__bg">
             </section>
       </main>
       <footer class="footer">
