--- a/pages/servicesDesign.html
+++ b/pages/servicesDesign.html
@@ -751,56 +751,29 @@
             <ul class="form__inputs">
               <li class="form__input input-block">
                 <label for="name">Name*</label>
-                <input
-                  type="text"
-                  name="name"
-                  id="application-name-input"
-                  placeholder="Your name"
-                />
+                <input type="text" name="name" id="application-name-input" placeholder="Your name">
               </li>
               <li class="form__input input-block">
                 <label for="phone">Phone*</label>
-                <input
-                  type="text"
-                  name="phone"
-                  id="application-phone-input"
-                  placeholder="Your phone number"
-                />
+                <input type="text" name="phone" id="application-phone-input" placeholder="Your phone number">
               </li>
               <li class="form__input input-block">
                 <label for="phone">Email</label>
-                <input
-                  type="text"
-                  name="phone"
-                  id="application-phone-input"
-                  placeholder="Your working email"
-                />
+                <input type="text" name="phone" id="application-phone-input" placeholder="Your working email">
               </li>
               <li class="form__input input-block">
                 <label for="message">Message*</label>
-                <textarea
-                  type="text"
-                  name="message"
-                  id="application-message-input"
-                  placeholder="Your message"
-                ></textarea>
+                <textarea type="text" name="message" id="application-message-input" placeholder="Your message"></textarea>
               </li>
               <div class="form__checkbox">
-                <input
-                  type="checkbox"
-                  name="form-checkbox"
-                  id="form-checkbox"
-                  class="custom-checkbox"
-                />
-                <label for="form-checkbox"
-                  >I agree to receive communications from Createx Construction
-                  Bureau.</label
-                >
+                <input type="checkbox" name="form-checkbox" id="form-checkbox" class="custom-checkbox">
+                <label for="form-checkbox">I agree to receive communications from Createx Construction Bureau.</label>
               </div>
             </ul>
             <button class="btn m-btn">send request</button>
           </form>
         </div>
+        <img src="../assets/background/application-bg.jpg" alt="application" class="application__bg">
       </section>
     </main>
     <footer class="footer">
